# live.moafunk.de

./: .eslintrc.cjs  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CNAME  DEPLOYMENT.md  MIGRATION.md  README.md  admin-SPA-migration-rollout.md  generate_relisten.py  index.html  ios-beta-2.html  ios-beta-3.html  ios-beta.html  main.css  main.js  package-lock.json  package.json  pyproject.toml  re-listen.html  sc-img.html  tech-reader.html  tech-rider.html  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/agents/: code-reviewer.md  debugger.md  dependency-auditor.md  doc-writer.md  refactorer.md  security-auditor.md  test-runner.md
.claude/workflows/: decompose-issue.js
.githooks/: post-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: backend-ghcr.yml  backend.yml  backup.yml  deploy.yml  frontend.yml  generate-re-listen.yml  main.yml
backend/: .dockerignore  .env.bootstrap.example  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf.example  test_submit.sh
backend/assets/fonts/Shoika-font/: Dafont - Free Fonts Download.url
backend/scripts/: configure_r2_cors.sh  deploy_hetzner.sh  deploy_lightsail.sh  dev-secrets.sh  provision_lightsail.sh  test_r2_access.sh
backend/scripts/backup/: backup-all.sh  backup-db.sh  backup-r2.sh  restore-db.sh  restore-r2.sh  setup_rclone.sh
backend/scripts/db/: init_sqlite.sh
backend/scripts/r2/: copy-bucket.sh  delete.sh  list.sh  move.sh  sync-check.sh
backend/src/: ai.rs  audio.rs  auth.rs  config.rs  db.rs  error.rs  image_overlay.rs  instagram.rs  main.rs  models.rs  pdf.rs  recording.rs  scheduler.rs  soundcloud.rs  storage.rs  stream_bridge.rs  telegram.rs  telegram_notify.rs  video.rs
backend/src/handlers/: admin.rs  api.rs  auth.rs  backup_trigger.rs  download.rs  mod.rs  recording.rs  settings.rs  stream_test_ws.rs  stream_ws.rs  submit.rs  submit_chunked.rs  upload_recording_chunked.rs
backend/templates/: artist_detail.html  artists.html  change_password.html  login.html  show_detail.html  shows.html  stream.html  users.html
docs/stream-rework/: backend-hetzner-migration.md  phase-2-icecast-runbook.md
frontend/: .env.example  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/scripts/: generate-html.js  generate_relisten.py
frontend/src/: index.html  main.css  main.ts  player.ts
frontend/tests/: config.test.ts  showCreatePayload.test.ts  test_generate_relisten.py
ios-beta/: index.html
scripts/: generate-html.js  generate_relisten.py
src/: config.ts  flv.js.d.ts  index.html  main.css  streamDetector.ts
src/pages/: tech-rider.html  (+1 more)
test/: README.md  index.html  main.css  main.js
tests/: streamDetector.test.ts
try/: index.html
(+141 files in other folders)
