[package]
name = "unheard-backend"
version = "0.1.0"
edition = "2021"
authors = ["Moafunk Radio"]
description = "Backend for UNHEARD Artists Form"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Templates
tera = "1"

# Authentication
argon2 = "0.5"
rand = "0.8"

# S3/R2 storage
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
envy = "0.4"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2"
base64-url = "2"
serde_urlencoded = "0.7"

# ZIP support
zip = "2"
tokio-util = { version = "0.7.17", features = ["io"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
